--- a/examples/makefile
+++ b/examples/makefile
@@ -16,7 +16,10 @@ SRC_DIR = src
 SQL_DIR = queries
 M3_OUT_DIR = generated/m3
 CPP_OUT_DIR = generated/cpp
+CONFIG_OUT_DIR = generated/config
+APP_OUT_DIR = generated/application
 EXE_OUT_DIR = bin
+APP_GEN = generated/app_generator
 
 # Find all SQL queries
 SQL_FILES := $(shell find $(SQL_DIR) -name "*.sql")
@@ -35,6 +38,9 @@ endif
 M3_FILES_BATCH := $(patsubst $(SQL_DIR)/%.sql, $(M3_OUT_DIR)/%_BATCH.m3, $(SQL_FILES))
 M3_FILES_SINGLE := $(patsubst $(SQL_DIR)/%.sql, $(M3_OUT_DIR)/%_SINGLE.m3, $(SQL_FILES))
 
+# Config to application compilation
+APPLICATION_FILES := $(patsubst $(SQL_DIR)/%.sql, $(APP_OUT_DIR)/%.hpp, $(SQL_FILES))
+
 # M3 to CPP compilation
 CPP_FILES_BATCH := $(patsubst $(M3_OUT_DIR)/%.m3, $(CPP_OUT_DIR)/%.hpp, $(M3_FILES_BATCH))
 CPP_FILES_SINGLE := $(patsubst $(M3_OUT_DIR)/%.m3, $(CPP_OUT_DIR)/%.hpp, $(M3_FILES_SINGLE))
@@ -47,6 +53,9 @@ EXE_FILES_SINGLE := $(patsubst $(CPP_OUT_DIR)/%.hpp, $(EXE_OUT_DIR)/%, $(CPP_FIL
 
 all: exe
 
+$(APP_GEN): $(SRC_DIR)/result_enumeration.cpp
+	$(CC) $(CFLAGS) $^ -o $@
+
 $(M3_FILES_BATCH): $(M3_OUT_DIR)/%_BATCH.m3: $(SQL_DIR)/%.sql
 	@test -d $(dir $@) || mkdir -p $(dir $@)
 	$(FRONTEND_BIN) --batch -o $@ $<
@@ -54,6 +63,9 @@ $(M3_FILES_BATCH): $(M3_OUT_DIR)/%_BATCH.m3: $(SQL_DIR)/%.sql
 $(M3_FILES_SINGLE): $(M3_OUT_DIR)/%_SINGLE.m3: $(SQL_DIR)/%.sql
 	@test -d $(dir $@) || mkdir -p $(dir $@)
 	$(FRONTEND_BIN) --single -o $@ $<
+
+$(APPLICATION_FILES): $(APP_OUT_DIR)/%.hpp: $(M3_OUT_DIR)/%_SINGLE.m3 $(APP_GEN)
+	./$(APP_GEN) $(patsubst %.hpp,%.txt,$(patsubst $(APP_OUT_DIR)/%,$(CONFIG_OUT_DIR)/%,$@)) $@
 
 $(CPP_FILES_BATCH): $(CPP_OUT_DIR)/%.hpp : $(M3_OUT_DIR)/%.m3
 	@test -d $(dir $@) || mkdir -p $(dir $@)
@@ -63,29 +75,19 @@ $(CPP_FILES_SINGLE): $(CPP_OUT_DIR)/%.hpp : $(M3_OUT_DIR)/%.m3
 	@test -d $(dir $@) || mkdir -p $(dir $@)
 	$(BACKEND_BIN) -o $@ $<
 
-$(EXE_FILES_BATCH): $(EXE_OUT_DIR)/%_$(BATCH_SIZE) : $(CPP_OUT_DIR)/%.hpp $(SRC_DIR)/main.cpp
+$(EXE_FILES_BATCH): $(EXE_OUT_DIR)/%_BATCH_$(BATCH_SIZE) : $(CPP_OUT_DIR)/%_BATCH.hpp $(SRC_DIR)/main.cpp $(APP_OUT_DIR)/%.hpp
 	@test -d $(dir $@) || mkdir -p $(dir $@)
 	$(eval DATASET := $(patsubst $(EXE_OUT_DIR)/%/, %, $(dir $@)))
-	$(eval APP_HEADER := $(patsubst $(EXE_OUT_DIR)/$(DATASET)/%_BATCH_$(BATCH_SIZE), $(SRC_DIR)/application/$(DATASET)/application_%.hpp, $@))
-	@if [ -f $(APP_HEADER) ]; then \
-		echo $(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -DBATCH_SIZE=$(BATCH_SIZE) -include $< -include $(APP_HEADER) -o $@; \
-		$(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -DBATCH_SIZE=$(BATCH_SIZE) -include $< -include $(APP_HEADER) -o $@; \
-	else \
-		echo $(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -DBATCH_SIZE=$(BATCH_SIZE) -include $< -include $(SRC_DIR)/application/$(DATASET)/application_$(DATASET).hpp -o $@; \
-		$(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -DBATCH_SIZE=$(BATCH_SIZE) -include $< -include $(SRC_DIR)/application/$(DATASET)/application_$(DATASET).hpp -o $@ ;\
-	fi
+	$(eval APP_HEADER := $(patsubst $(EXE_OUT_DIR)/$(DATASET)/%_BATCH_${BATCH_SIZE}, $(APP_OUT_DIR)/$(DATASET)/%.hpp, $@))
+	$(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -DBATCH_SIZE=$(BATCH_SIZE) -include $< -include $(APP_HEADER) -o $@; \
 
-$(EXE_FILES_SINGLE): $(EXE_OUT_DIR)/% : $(CPP_OUT_DIR)/%.hpp $(SRC_DIR)/main.cpp
+
+$(EXE_FILES_SINGLE): $(EXE_OUT_DIR)/%_SINGLE : $(CPP_OUT_DIR)/%_SINGLE.hpp $(SRC_DIR)/main.cpp $(APP_OUT_DIR)/%.hpp
 	@test -d $(dir $@) || mkdir -p $(dir $@)
 	$(eval DATASET := $(patsubst $(EXE_OUT_DIR)/%/,%, $(dir $@)))	
-	$(eval APP_HEADER := $(patsubst $(EXE_OUT_DIR)/$(DATASET)/%_SINGLE, $(SRC_DIR)/application/$(DATASET)/application_%.hpp, $@))
-	@if [ -f $(APP_HEADER) ]; then \
-		echo $(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -include $< -include $(APP_HEADER) -o $@; \
-		$(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -include $< -include $(APP_HEADER) -o $@; \
-	else \
-		echo $(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -include $< -include $(SRC_DIR)/application/$(DATASET)/application_$(DATASET).hpp -o $@; \
-		$(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -include $< -include $(SRC_DIR)/application/$(DATASET)/application_$(DATASET).hpp -o $@ ; \
-	fi
+	$(eval APP_HEADER := $(patsubst $(EXE_OUT_DIR)/$(DATASET)/%_SINGLE, $(APP_OUT_DIR)/$(DATASET)/%.hpp, $@))
+	$(CC) $(CFLAGS) $(SRC_DIR)/main.cpp -I ../backend/lib -I $(SRC_DIR) -I $(SRC_DIR)/lib -include $< -include $(APP_HEADER) -o $@; \
+
 
 m3_batch: $(M3_FILES_BATCH)
 
@@ -106,4 +108,4 @@ exe_single: $(EXE_FILES_SINGLE)
 exe: exe_batch exe_single
 
 clean: 
-	rm -fr $(M3_OUT_DIR) $(CPP_OUT_DIR) $(EXE_OUT_DIR)
+	rm -fr $(M3_OUT_DIR) $(CPP_OUT_DIR) $(EXE_OUT_DIR) $(CONFIG_OUT_DIR)
